--- a/index.html
+++ b/index.html
@@ -1,95 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sagar Gardenia — Premium Restaurant</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sagar Gardenia</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header / Navigation -->
+    <header>
+        <div class="container">
+            <h1 class="logo">Sagar Gardenia</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <!-- HEADER -->
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Sagar Gardenia</h1>
-      <p>Premium Dining Experience in Bangalore</p>
-      <a href="#menu" class="btn">View Menu</a>
-    </div>
-  </header>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="container">
+            <h2>Welcome to Sagar Gardenia</h2>
+            <p>Your peaceful escape into nature.</p>
+            <a href="#about" class="btn">Learn More</a>
+        </div>
+    </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section">
-    <h2>About Us</h2>
-    <p>
-      Welcome to Sagar Gardenia — a fine dining restaurant bringing you the best culinary experiences in the heart of Bangalore.  
-      Fresh ingredients • Elegant ambiance • Memorable moments.
-    </p>
-  </section>
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>Sagar Gardenia is a beautiful garden space designed for relaxation, events, and nature lovers. Enjoy greenery, flowers, and open spaces with your family and friends.</p>
+        </div>
+    </section>
 
-  <!-- MENU -->
-  <section id="menu" class="section">
-    <h2>Our Menu</h2>
-    <div class="menu-grid">
-      <div class="menu-card">
-        <img src="https://source.unsplash.com/400x300/?dining,food" alt="Delicious cuisine">
-        <h3>Chef's Special Thali</h3>
-        <p>Flavors from across India, served with love.</p>
-      </div>
-      <div class="menu-card">
-        <img src="https://source.unsplash.com/401x301/?curry,meal" alt="Premium dish">
-        <h3>Signature Curry</h3>
-        <p>Rich spices and authentic taste.</p>
-      </div>
-      <div class="menu-card">
-        <img src="https://source.unsplash.com/402x302/?dessert" alt="Dessert">
-        <h3>Gourmet Desserts</h3>
-        <p>Satisfy your sweet cravings.</p>
-      </div>
-    </div>
-  </section>
+    <!-- Gallery Section -->
+    <section id="gallery" class="gallery">
+        <div class="container">
+            <h2>Gallery</h2>
+            <div class="photos">
+                <img src="garden1.jpg" alt="Garden Photo 1">
+                <img src="garden2.jpg" alt="Garden Photo 2">
+                <img src="garden3.jpg" alt="Garden Photo 3">
+            </div>
+        </div>
+    </section>
 
-  <!-- GALLERY -->
-  <section id="gallery" class="section">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="https://source.unsplash.com/300x300/?restaurant,interior" alt="Gallery photo">
-      <img src="https://source.unsplash.com/301x301/?restaurant,ambience" alt="Gallery photo">
-      <img src="https://source.unsplash.com/302x302/?food,plating" alt="Gallery photo">
-      <img src="https://source.unsplash.com/303x303/?dining,setup" alt="Gallery photo">
-    </div>
-  </section>
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Contact Us</h2>
+            <p>Email: info@sagargardenia.com</p>
+            <p>Phone: +91-12345-67890</p>
+        </div>
+    </section>
 
-  <!-- LOCATION -->
-  <section id="location" class="section">
-    <h2>Location</h2>
-    <div class="map-container">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31106.123456789!2d77.123456!3d13.123456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae0example%3A0xexample!2sSagar+Gardenia!5e0!3m2!1sen!2sin!4v1234567890" 
-        width="100%" 
-        height="350" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy">
-      </iframe>
-    </div>
-    <p>123 Gardenia Road, Nagarbhavi, Bangalore, Karnataka, India</p>
-  </section>
-
-  <!-- CONTACT -->
-  <section id="contact" class="section">
-    <h2>Contact Us</h2>
-    <p>Phone: +91 99000 12345</p>
-    <p>Email: info@sagargardenia.in</p>
-    <p>Open Hours: Mon – Sun: 11:00 AM – 11:00 PM</p>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    <p>&copy; 2026 Sagar Gardenia — All Rights Reserved</p>
-  </footer>
-
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2026 Sagar Gardenia. All rights reserved.</p>
+    </footer>
 </body>
 </html>
